Native JavaScript compiler

--- a/src/css/app.styl
+++ b/src/css/app.styl
@@ -3,3 +3,11 @@
 .pipes-tooltip
   background-color #7397d1
   font-size 1.0em
+
+option:disabled {
+  color: #abcdef;
+}
+
+.disabled {
+      color: #abcdef;
+  }
