--- a/docs/_includes/javadoclinks.html
+++ b/docs/_includes/javadoclinks.html
@@ -10,5 +10,5 @@
 {% assign doclinks = doclinks | reverse %}
 
 {% for link in doclinks | reverse %}
- <p><a href="{{link}}/">Envision {{link}}</a></p>
+ <p><a href="{{link}}/">Pipes {{link}}</a></p>
 {% endfor %}
